--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,15 @@ dependencies {
     // DataStore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
+    // Room
+    implementation "androidx.room:room-runtime:2.6.1"
+    kapt "androidx.room:room-compiler:2.6.1"
+    implementation "androidx.room:room-ktx:2.6.1"
+
+    // Swipe refresh
+    implementation("com.google.accompanist:accompanist-swiperefresh:0.31.1-alpha")
+
+
 
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
